--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,4 @@
 // HEADER LANDING PAGE
-
 .header_landing {
   background: black;
   top: 0;
@@ -14,7 +13,7 @@
     z-index: -5;
     height: 100vh;
     display: grid;
-    grid-template: 43% 50% / 32.5% 1fr;
+    grid-template: 1fr 1fr / 1fr 2fr;
     grid-gap: 20rem;
     transition: all 1s ease;
 
@@ -28,6 +27,17 @@
       background: no-repeat center url(../img/placeholder/nor-flagg-lines.svg);
       background-size: cover;
     }
+
+    @media only screen and (max-width: $bp-large) {
+      grid-template: 1fr 1fr / 1fr 3fr;
+      grid-gap: 10rem;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      grid-template-rows: 50% 50%;
+      grid-template-columns: 1fr;
+      grid-gap: 0;
+    }
   }
 
   &_video {
@@ -38,6 +48,10 @@
     min-width: 100%;
     min-height: 100%;
     object-fit: cover;
+
+    @media only screen and (max-width: $bp-large) {
+      display: none;
+    }
   }
 
   & img {
@@ -46,19 +60,38 @@
     object-fit: cover;
     display: block;
   }
+
   &_img--1 {
     grid-row: 2;
     grid-column: 1;
+
+    @media only screen and (max-width: $bp-large) {
+      grid-column: 2;
+
+      object-position: 0 0;
+    }
   }
 
   &_img--2 {
     grid-row: 2;
     grid-column: 2;
+
+    @media only screen and (max-width: $bp-large) {
+      
+
+      display: none !important;
+    }
   }
 
   &_img--3 {
     grid-row: 1;
     grid-column: 2;
+
+    @media only screen and (max-width: $bp-large) {
+      grid-row: 1;
+
+      object-position: 0 0;
+    }
   }
 
   &_text {
@@ -84,6 +117,9 @@
       grid-area: 1 / 1 / -1 / -1;
       z-index: -10;
       opacity: 0.6;
+    }
+
+    &_headline {
     }
 
     &_subtitle {
