--- a/sass/_multimedia-grid-modules.scss
+++ b/sass/_multimedia-grid-modules.scss
@@ -6,9 +6,6 @@
     grid-gap: 1.5rem;
     padding: 1.5rem;
 
-    @media only screen and (max-width: $bp-medium) {
-      grid-gap: 0.3rem;
-    }
 
     &_img {
       &--1 {
@@ -70,6 +67,13 @@
         grid-row: 3 / span 1;
         grid-column: 5 / -1;
       }
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-gap: 0.3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
     }
   }
 
