--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -59,6 +59,13 @@ $bp-small: 37.5em; // 600px;
   box-sizing: inherit;
 }
 
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
+*/
+
 html {
   // This defines what 1rem is
   font-size: 62.5%;
