--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -48,6 +48,9 @@
     min-width: 100%;
     min-height: 100%;
     object-fit: cover;
+    object-position: 20% 0;
+
+    transform: rotateY(180deg);
 
     @media only screen and (max-width: $bp-large) {
       display: none;
@@ -65,6 +68,8 @@
     grid-row: 2;
     grid-column: 1;
 
+    object-position: 0 15%;
+
     @media only screen and (max-width: $bp-large) {
       grid-column: 2;
 
@@ -75,10 +80,9 @@
   &_img--2 {
     grid-row: 2;
     grid-column: 2;
+    object-position: 0 35%;
 
     @media only screen and (max-width: $bp-large) {
-      
-
       display: none !important;
     }
   }
@@ -126,7 +130,11 @@
       color: white;
       margin: 0 auto;
       width: 80%;
-      font-weight: 400;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-row-gap: 2rem;
+      padding: 1rem;
     }
   }
 }
