--- a/sass/_multimedia-grid-modules.scss
+++ b/sass/_multimedia-grid-modules.scss
@@ -11,61 +11,121 @@
       &--1 {
         grid-row: 1 / span 2;
         grid-column: 1;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 1;
+          grid-column: 1;
+        }
       }
 
       &--2 {
         grid-row: 1;
         grid-column: 2;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 1;
+          grid-column: 2;
+        }
       }
 
       &--3 {
-        grid-row: 1 / 1;
+        grid-row: 1;
         grid-column: 3;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 1;
+          grid-column: 3;
+        }
       }
 
       &--4 {
         grid-row: 1 / span 2;
         grid-column: 4 / span 2;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 2;
+          grid-column: 1;
+        }
       }
 
       &--5 {
-        grid-row: 3;
-        grid-column: 1;
+        grid-row: 1;
+        grid-column: 6;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 2 / span 2;
+          grid-column: 2 / span 2;
+        }
       }
 
       &--6 {
         grid-row: 2;
         grid-column: 2;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 3;
+          grid-column: 1;
+        }
       }
 
       &--7 {
-        grid-row: 3;
-        grid-column: 1;
+        grid-row: 2;
+        grid-column: 3;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 4;
+          grid-column: 1;
+        }
       }
 
       &--8 {
         grid-row: 2;
-        grid-column: 3;
+        grid-column: 6;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 4;
+          grid-column: 2;
+        }
       }
 
       &--9 {
-        grid-row: 2;
-        grid-column: 6 / -1;
+        grid-row: 3;
+        grid-column: 1;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 4;
+          grid-column: 3;
+        }
       }
 
       &--10 {
         grid-row: 3;
         grid-column: 2 / span 2;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 5 / span 2;
+          grid-column: 1 / span 2;
+        }
       }
 
       &--11 {
         grid-row: 3;
         grid-column: 4;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 5;
+          grid-column: 3;
+        }
       }
 
       &--12 {
         grid-row: 3 / span 1;
         grid-column: 5 / -1;
+
+        @media only screen and (max-width: $bp-small) {
+          grid-row: 6;
+          grid-column: 3;
+        }
       }
     }
 
@@ -74,6 +134,7 @@
     }
 
     @media only screen and (max-width: $bp-small) {
+      grid-template: repeat(6, 30vw) / repeat(3, 1fr);
     }
   }
 
@@ -85,6 +146,7 @@
   }
 }
 
+/*
 // IMAGE GRID B, 2 rows of 6 columns
 .image-grid-b {
   &_media {
@@ -139,3 +201,4 @@
     display: block;
   }
 }
+*/
