--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -19,7 +19,8 @@
     font-size: 5rem;
 
     @media only screen and (max-width: $bp-small) {
-      font-size: 4.5rem;
+      font-size: 3.5rem;
+      font-weight: 400;
     }
   }
 
@@ -28,7 +29,7 @@
     font-size: 7rem;
 
     @media only screen and (max-width: $bp-small) {
-      font-size: 6rem;
+      font-size: 5.5rem;
     }
   }
 
@@ -38,7 +39,7 @@
     letter-spacing: .1rem;
 
     @media only screen and (max-width: $bp-small) {
-      font-size: 8rem;
+      font-size: 7rem;
     }
   }
 
@@ -49,7 +50,7 @@
     letter-spacing: .1rem;
 
     @media only screen and (max-width: $bp-small) {
-      font-size: 10rem;
+      font-size: 9rem;
     }
   }
 }
@@ -65,7 +66,7 @@
     font-size: 2rem;
 
     @media only screen and (max-width: $bp-largest) {
-      font-size: 2.5rem;
+      font-size: 2.7rem;
     }
   }
 
