--- a/sass/main.css
+++ b/sass/main.css
@@ -61,6 +61,21 @@ video {
   transition: var(--ease);
 }
 
+.slide-up-long {
+  -webkit-animation: slide-up-long 3s;
+          animation: slide-up-long 3s;
+}
+
+.slide-up-medium {
+  -webkit-animation: slide-up-medium 2.5s;
+          animation: slide-up-medium 2.5s;
+}
+
+.slide-up-short {
+  -webkit-animation: slide-up-short 2s;
+          animation: slide-up-short 2s;
+}
+
 @-webkit-keyframes bounce {
   0% {
     bottom: 22%;
@@ -82,6 +97,48 @@ video {
   }
   100% {
     bottom: 22%;
+  }
+}
+
+@-webkit-keyframes slide-up-long {
+  0% {
+    -webkit-transform: translateY(20rem);
+            transform: translateY(20rem);
+  }
+}
+
+@keyframes slide-up-long {
+  0% {
+    -webkit-transform: translateY(20rem);
+            transform: translateY(20rem);
+  }
+}
+
+@-webkit-keyframes slide-up-medium {
+  0% {
+    -webkit-transform: translateY(15rem);
+            transform: translateY(15rem);
+  }
+}
+
+@keyframes slide-up-medium {
+  0% {
+    -webkit-transform: translateY(15rem);
+            transform: translateY(15rem);
+  }
+}
+
+@-webkit-keyframes slide-up-short {
+  0% {
+    -webkit-transform: translateY(10rem);
+            transform: translateY(10rem);
+  }
+}
+
+@keyframes slide-up-short {
+  0% {
+    -webkit-transform: translateY(10rem);
+            transform: translateY(10rem);
   }
 }
 
@@ -136,6 +193,12 @@ responsive bilder med picture tag*/
           box-sizing: inherit;
 }
 
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
+*/
 html {
   font-size: 62.5%;
 }
@@ -187,7 +250,8 @@ body {
 
 @media only screen and (max-width: 37.5em) {
   .headline--s {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
+    font-weight: 400;
   }
 }
 
@@ -197,7 +261,7 @@ body {
 
 @media only screen and (max-width: 37.5em) {
   .headline--m {
-    font-size: 6rem;
+    font-size: 5.5rem;
   }
 }
 
@@ -208,7 +272,7 @@ body {
 
 @media only screen and (max-width: 37.5em) {
   .headline--l {
-    font-size: 8rem;
+    font-size: 7rem;
   }
 }
 
@@ -220,7 +284,7 @@ body {
 
 @media only screen and (max-width: 37.5em) {
   .headline--xl {
-    font-size: 10rem;
+    font-size: 9rem;
   }
 }
 
@@ -235,7 +299,7 @@ body {
 
 @media only screen and (max-width: 75em) {
   .text--s {
-    font-size: 2.5rem;
+    font-size: 2.7rem;
   }
 }
 
@@ -343,6 +407,10 @@ body {
   min-height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: 20% 0;
+     object-position: 20% 0;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 @media only screen and (max-width: 62.5em) {
@@ -364,6 +432,8 @@ body {
   grid-row: 2;
   -ms-grid-column: 1;
   grid-column: 1;
+  -o-object-position: 0 15%;
+     object-position: 0 15%;
 }
 
 @media only screen and (max-width: 62.5em) {
@@ -380,6 +450,8 @@ body {
   grid-row: 2;
   -ms-grid-column: 2;
   grid-column: 2;
+  -o-object-position: 0 35%;
+     object-position: 0 35%;
 }
 
 @media only screen and (max-width: 62.5em) {
@@ -437,7 +509,13 @@ body {
   color: white;
   margin: 0 auto;
   width: 80%;
-  font-weight: 400;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .header_landing_text {
+    grid-row-gap: 2rem;
+    padding: 1rem;
+  }
 }
 
 .scroll-indicator {
@@ -518,6 +596,8 @@ body {
 
 @media only screen and (max-width: 75em) {
   .multimedia-a_media_img--2 {
+    -ms-grid-row: 4;
+    grid-row: 4;
     -ms-grid-column: 4;
     -ms-grid-column-span: 3;
     grid-column: 4 / 7;
@@ -528,6 +608,7 @@ body {
   .multimedia-a_media {
     -ms-grid-rows: (minmax(10rem, 10rem))[5];
         grid-template-rows: repeat(5, minmax(10rem, 10rem));
+    margin: 0rem 2rem;
   }
 }
 
@@ -554,8 +635,8 @@ body {
   background-size: cover;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(70rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(70rem, 1fr));
+  -ms-grid-columns: (minmax(60rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
 }
 
 .multimedia-b_text {
@@ -576,7 +657,7 @@ body {
 }
 
 .multimedia-b_excerpt {
-  margin: 50% 0rem;
+  margin: 20% 0rem;
   max-width: 45rem;
   padding: 1.5rem;
   -ms-grid-column-align: right;
@@ -650,6 +731,14 @@ body {
   }
 }
 
+@media only screen and (max-width: 37.5em) {
+  .multimedia-c {
+    grid-gap: 0rem;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
 .multimedia-d {
   display: -ms-grid;
   display: grid;
@@ -674,14 +763,12 @@ body {
 }
 
 .multimedia-d_media_img--1 {
-  -ms-grid-row: 5;
-  grid-row: 5;
+  -ms-grid-row: 4;
+  grid-row: 4;
   -ms-grid-column: 3;
   -ms-grid-column-span: 2;
   grid-column: 3 / 5;
   width: 120%;
-  -webkit-box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
-          box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -702,8 +789,6 @@ body {
   -ms-grid-column-span: 2;
   grid-column: 5 / 7;
   z-index: 20;
-  -webkit-box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
-          box-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -718,6 +803,7 @@ body {
 
 @media only screen and (max-width: 37.5em) {
   .multimedia-d_media {
+    margin: 0rem 0rem 10rem;
     -ms-grid-rows: (10vh)[6];
         grid-template-rows: repeat(6, 10vh);
     -ms-grid-columns: (1fr)[6];
@@ -743,8 +829,8 @@ body {
 }
 
 .multimedia-d_excerpt {
-  -ms-grid-row: 4;
-  grid-row: 4;
+  -ms-grid-row: 3;
+  grid-row: 3;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-column: 4 / 7;
@@ -830,7 +916,7 @@ body {
   grid-column: 1;
   font-size: 10rem;
   color: white;
-  background: gray;
+  background: black;
   line-height: 0;
 }
 
@@ -847,8 +933,8 @@ body {
   width: 100%;
   height: 100%;
   cursor: pointer;
-  -webkit-transition: background .2s ease-in-out;
-  transition: background .2s ease-in-out;
+  -webkit-transition: background 0.1s ease-in-out;
+  transition: background 0.1s ease-in-out;
 }
 
 .multimedia-e_media_next_a::-moz-selection {
@@ -860,12 +946,19 @@ body {
 }
 
 .multimedia-e_media_next_a:hover, .multimedia-e_media_next_a:active {
-  background: darkred;
+  background: #af1010;
 }
 
 @media only screen and (max-width: 37.5em) {
   .multimedia-e_media_next {
-    font-size: 6rem;
+    -ms-grid-column-align: right;
+        justify-self: right;
+    width: 100%;
+    height: 100%;
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    grid-column: 1;
   }
 }
 
@@ -882,6 +975,23 @@ body {
   -ms-grid-column-span: 3;
   grid-column: 1 / span 3;
   color: white;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .multimedia-e_media {
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .multimedia-e {
+    grid-gap: 0rem;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 
 .multimedia-f {
@@ -928,10 +1038,10 @@ body {
 
 .text-b {
   background: #333;
-  padding: 10rem 0rem;
 }
 
 .text-b_text {
+  padding: 10rem 4rem;
   color: white;
   max-width: 80rem;
   display: -ms-grid;
@@ -941,8 +1051,8 @@ body {
 }
 
 @media only screen and (max-width: 37.5em) {
-  .text-b {
-    padding: 10rem 4rem;
+  .text-b_text {
+    padding: 5rem 4rem;
   }
 }
 
@@ -1037,6 +1147,10 @@ body {
   min-height: 100vh;
 }
 
+.multimedia-scroll_text_quoteblock p span {
+  background: var(--light);
+}
+
 .multimedia-scroll_text_quoteblock--1 {
   min-height: 50vh;
 }
@@ -1075,6 +1189,15 @@ body {
   grid-column: 1;
 }
 
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--1 {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+
 .image-grid-a_media_img--2 {
   -ms-grid-row: 1;
   grid-row: 1;
@@ -1082,11 +1205,29 @@ body {
   grid-column: 2;
 }
 
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--2 {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+}
+
 .image-grid-a_media_img--3 {
   -ms-grid-row: 1;
-  grid-row: 1 / 1;
+  grid-row: 1;
   -ms-grid-column: 3;
   grid-column: 3;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--3 {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 3;
+    grid-column: 3;
+  }
 }
 
 .image-grid-a_media_img--4 {
@@ -1098,11 +1239,31 @@ body {
   grid-column: 4 / span 2;
 }
 
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--4 {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+
 .image-grid-a_media_img--5 {
-  -ms-grid-row: 3;
-  grid-row: 3;
-  -ms-grid-column: 1;
-  grid-column: 1;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-grid-column: 6;
+  grid-column: 6;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--5 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
+    grid-row: 2 / span 2;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2 / span 2;
+  }
 }
 
 .image-grid-a_media_img--6 {
@@ -1112,24 +1273,61 @@ body {
   grid-column: 2;
 }
 
-.image-grid-a_media_img--7 {
-  -ms-grid-row: 3;
-  grid-row: 3;
-  -ms-grid-column: 1;
-  grid-column: 1;
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--6 {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
 }
 
-.image-grid-a_media_img--8 {
+.image-grid-a_media_img--7 {
   -ms-grid-row: 2;
   grid-row: 2;
   -ms-grid-column: 3;
   grid-column: 3;
 }
 
-.image-grid-a_media_img--9 {
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--7 {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+
+.image-grid-a_media_img--8 {
   -ms-grid-row: 2;
   grid-row: 2;
-  grid-column: 6 / -1;
+  -ms-grid-column: 6;
+  grid-column: 6;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--8 {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+}
+
+.image-grid-a_media_img--9 {
+  -ms-grid-row: 3;
+  grid-row: 3;
+  -ms-grid-column: 1;
+  grid-column: 1;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--9 {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 3;
+    grid-column: 3;
+  }
 }
 
 .image-grid-a_media_img--10 {
@@ -1140,11 +1338,31 @@ body {
   grid-column: 2 / span 2;
 }
 
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--10 {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 2;
+    grid-row: 5 / span 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / span 2;
+  }
+}
+
 .image-grid-a_media_img--11 {
   -ms-grid-row: 3;
   grid-row: 3;
   -ms-grid-column: 4;
   grid-column: 4;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--11 {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    -ms-grid-column: 3;
+    grid-column: 3;
+  }
 }
 
 .image-grid-a_media_img--12 {
@@ -1154,9 +1372,26 @@ body {
   grid-column: 5 / -1;
 }
 
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media_img--12 {
+    -ms-grid-row: 6;
+    grid-row: 6;
+    -ms-grid-column: 3;
+    grid-column: 3;
+  }
+}
+
 @media only screen and (max-width: 50em) {
   .image-grid-a_media {
     grid-gap: 0.3rem;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .image-grid-a_media {
+    -ms-grid-rows: (30vw)[6];
+    -ms-grid-columns: (1fr)[3];
+        grid-template: repeat(6, 30vw)/repeat(3, 1fr);
   }
 }
 
@@ -1168,77 +1403,62 @@ body {
   display: block;
 }
 
-.image-grid-b_media {
-  background: white;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (15vw)[2];
-  -ms-grid-columns: (1fr)[6];
-      grid-template: repeat(2, 15vw)/repeat(6, 1fr);
-  grid-gap: 1.5rem;
-  padding: 1.5rem;
-}
+/*
+// IMAGE GRID B, 2 rows of 6 columns
+.image-grid-b {
+  &_media {
+    background: white;
+    display: grid;
+    grid-template: repeat(2, 15vw) / repeat(6, 1fr);
+    grid-gap: 1.5rem;
+    padding: 1.5rem;
 
-.image-grid-b_media_img--1 {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / span 2;
-  -ms-grid-column: 1;
-  grid-column: 1;
-}
+    &_img {
+      &--1 {
+        grid-row: 1 / span 2;
+        grid-column: 1;
+      }
 
-.image-grid-b_media_img--2 {
-  -ms-grid-row: 1;
-  grid-row: 1;
-  -ms-grid-column: 2;
-  grid-column: 2;
-}
+      &--2 {
+        grid-row: 1;
+        grid-column: 2;
+      }
 
-.image-grid-b_media_img--3 {
-  -ms-grid-row: 1;
-  grid-row: 1 / 1;
-  -ms-grid-column: 3;
-  grid-column: 3;
-}
+      &--3 {
+        grid-row: 1 / 1;
+        grid-column: 3;
+      }
 
-.image-grid-b_media_img--4 {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / span 2;
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 2;
-  grid-column: 4 / span 2;
-}
+      &--4 {
+        grid-row: 1 / span 2;
+        grid-column: 4 / span 2;
+      }
 
-.image-grid-b_media_img--5 {
-  -ms-grid-row: 2;
-  grid-row: 2;
-  -ms-grid-column: 3;
-  grid-column: 3;
-}
+      &--5 {
+        grid-row: 2;
+        grid-column: 3;
+      }
 
-.image-grid-b_media_img--6 {
-  -ms-grid-row: 2;
-  grid-row: 2;
-  -ms-grid-column: 2;
-  grid-column: 2;
-}
+      &--6 {
+        grid-row: 2;
+        grid-column: 2;
+      }
 
-.image-grid-b_media_img--7 {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  grid-row: 1 / span 2;
-  grid-column: 6 / -1;
-}
+      &--7 {
+        grid-row: 1 / span 2;
+        grid-column: 6 / -1;
+      }
+    }
+  }
 
-.image-grid-b img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  display: block;
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
 }
-
+*/
 .dv-small-a {
   padding: 10rem 0rem;
   background: linear-gradient(55deg, #2c0303a2 0%, #3a3a3aa8 85%), no-repeat center url(../img/bilder-bak_8443.jpg);
