--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,5 @@
+
+
 // HEADER LANDING PAGE
 .header_landing {
   background: black;
@@ -54,6 +56,7 @@
 
     @media only screen and (max-width: $bp-large) {
       display: none;
+      visibility: hidden;
     }
   }
 
@@ -107,7 +110,7 @@
     text-align: center;
     z-index: -3;
 
-    text-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
+    text-shadow: 0 5px 20px #1e282de3;
 
     &::before {
       content: "";
