--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -11,9 +11,20 @@
   //font-family: lft-etica, sans-serif;
 
   line-height: 125%;
+  letter-spacing: .1rem;
 }
 
 .headline {
+  &--xs {
+    @extend %headline;
+    font-size: 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 2rem;
+      font-weight: 400;
+    }
+  }
+
   &--s {
     @extend %headline;
     font-size: 5rem;
@@ -36,7 +47,6 @@
   &--l {
     @extend %headline;
     font-size: 10rem;
-    letter-spacing: .1rem;
 
     @media only screen and (max-width: $bp-small) {
       font-size: 7rem;
@@ -47,7 +57,6 @@
     @extend %headline;
     font-size: 14rem;
     color: white;
-    letter-spacing: .1rem;
 
     @media only screen and (max-width: $bp-small) {
       font-size: 9rem;
