--- a/sass/main.css
+++ b/sass/main.css
@@ -56,9 +56,14 @@ video {
 }
 
 .ease {
-  --ease: all .5s ease;
-  -webkit-transition: var(--ease);
-  transition: var(--ease);
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.scroll-helper {
+  height: 10vh;
+  width: 100%;
+  border: 3px solid orange;
 }
 
 .slide-up-long {
@@ -74,6 +79,41 @@ video {
 .slide-up-short {
   -webkit-animation: slide-up-short 2s;
           animation: slide-up-short 2s;
+}
+
+.bounce2 {
+  -webkit-animation: bounce2 3s infinite;
+          animation: bounce2 3s infinite;
+}
+
+@-webkit-keyframes bounce2 {
+  0% {
+    -webkit-transform: translateY(0rem);
+            transform: translateY(0rem);
+  }
+  50% {
+    -webkit-transform: translateY(1rem);
+            transform: translateY(1rem);
+  }
+  100% {
+    -webkit-transform: translateY(0rem);
+            transform: translateY(0rem);
+  }
+}
+
+@keyframes bounce2 {
+  0% {
+    -webkit-transform: translateY(0rem);
+            transform: translateY(0rem);
+  }
+  50% {
+    -webkit-transform: translateY(1rem);
+            transform: translateY(1rem);
+  }
+  100% {
+    -webkit-transform: translateY(0rem);
+            transform: translateY(0rem);
+  }
 }
 
 @-webkit-keyframes bounce {
@@ -102,29 +142,57 @@ video {
 
 @-webkit-keyframes slide-up-long {
   0% {
-    -webkit-transform: translateY(20rem);
-            transform: translateY(20rem);
+    -webkit-transform: translateY(30rem);
+            transform: translateY(30rem);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
 @keyframes slide-up-long {
   0% {
-    -webkit-transform: translateY(20rem);
-            transform: translateY(20rem);
+    -webkit-transform: translateY(30rem);
+            transform: translateY(30rem);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
 @-webkit-keyframes slide-up-medium {
   0% {
-    -webkit-transform: translateY(15rem);
-            transform: translateY(15rem);
+    -webkit-transform: translateY(20rem);
+            transform: translateY(20rem);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
 @keyframes slide-up-medium {
   0% {
-    -webkit-transform: translateY(15rem);
-            transform: translateY(15rem);
+    -webkit-transform: translateY(20rem);
+            transform: translateY(20rem);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -132,6 +200,13 @@ video {
   0% {
     -webkit-transform: translateY(10rem);
             transform: translateY(10rem);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -139,6 +214,36 @@ video {
   0% {
     -webkit-transform: translateY(10rem);
             transform: translateY(10rem);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-in-2 {
+  -webkit-animation: test 0.5s;
+          animation: test 0.5s;
+}
+
+@-webkit-keyframes test {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes test {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -237,11 +342,23 @@ body {
   color: white;
 }
 
-.headline--s, .headline--m, .headline--l, .headline--xl {
+.headline--xs, .headline--s, .headline--m, .headline--l, .headline--xl {
   text-align: center;
   font-family: 'Oswald', sans-serif;
   font-family: 'Anton', sans-serif;
   line-height: 125%;
+  letter-spacing: .1rem;
+}
+
+.headline--xs {
+  font-size: 3rem;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .headline--xs {
+    font-size: 2rem;
+    font-weight: 400;
+  }
 }
 
 .headline--s {
@@ -267,7 +384,6 @@ body {
 
 .headline--l {
   font-size: 10rem;
-  letter-spacing: .1rem;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -279,7 +395,6 @@ body {
 .headline--xl {
   font-size: 14rem;
   color: white;
-  letter-spacing: .1rem;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -416,6 +531,7 @@ body {
 @media only screen and (max-width: 62.5em) {
   .header_landing_video {
     display: none;
+    visibility: hidden;
   }
 }
 
@@ -488,7 +604,7 @@ body {
       align-content: center;
   text-align: center;
   z-index: -3;
-  text-shadow: 0 5px 20px rgba(30, 40, 45, 0.6);
+  text-shadow: 0 5px 20px #1e282de3;
 }
 
 .header_landing_text::before {
@@ -559,7 +675,7 @@ body {
   display: grid;
   -ms-grid-columns: (minmax(30rem, 50rem))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(30rem, 50rem));
-  grid-gap: 5rem;
+  grid-gap: 10rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -588,9 +704,9 @@ body {
 .multimedia-a_media_img--2 {
   -ms-grid-row: 6;
   grid-row: 6 / 6;
-  -ms-grid-column: 3;
+  -ms-grid-column: 4;
   -ms-grid-column-span: 3;
-  grid-column: 3 / 6;
+  grid-column: 4 / 7;
   z-index: 20;
 }
 
@@ -623,9 +739,15 @@ body {
   grid-row-gap: 2rem;
 }
 
-@media only screen and (max-width: 75em) {
+@media only screen and (max-width: 37.5em) {
   .multimedia-a_text {
-    padding: 10rem 3rem;
+    padding: 20rem 3rem;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .multimedia-a {
+    grid-gap: 2rem;
   }
 }
 
@@ -657,7 +779,7 @@ body {
 }
 
 .multimedia-b_excerpt {
-  margin: 20% 0rem;
+  margin: 10% 0rem;
   max-width: 45rem;
   padding: 1.5rem;
   -ms-grid-column-align: right;
@@ -703,7 +825,10 @@ body {
 
 @media only screen and (max-width: 50em) {
   .multimedia-c_media {
+    -ms-grid-row: 2;
+    grid-row: 2;
     padding: 0rem 3.5rem;
+    margin-bottom: 5rem;
   }
 }
 
@@ -721,6 +846,8 @@ body {
 
 @media only screen and (max-width: 50em) {
   .multimedia-c_text {
+    -ms-grid-row: 1;
+    grid-row: 1;
     padding: 5rem 3rem;
   }
 }
@@ -763,12 +890,12 @@ body {
 }
 
 .multimedia-d_media_img--1 {
-  -ms-grid-row: 4;
-  grid-row: 4;
+  -ms-grid-row: 3;
+  grid-row: 3;
   -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
-  grid-column: 3 / 5;
-  width: 120%;
+  -ms-grid-column-span: 3;
+  grid-column: 3 / 6;
+  width: 100%;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -829,8 +956,8 @@ body {
 }
 
 .multimedia-d_excerpt {
-  -ms-grid-row: 3;
-  grid-row: 3;
+  -ms-grid-row: 2;
+  grid-row: 2;
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-column: 4 / 7;
@@ -908,19 +1035,18 @@ body {
 .multimedia-e_media_next {
   -ms-grid-column-align: right;
       justify-self: right;
-  width: 150%;
-  height: 150%;
   -ms-grid-row: 5;
   grid-row: 5;
   -ms-grid-column: 1;
   grid-column: 1;
   font-size: 10rem;
   color: white;
-  background: black;
   line-height: 0;
 }
 
 .multimedia-e_media_next_a {
+  padding: 2rem;
+  background: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -946,7 +1072,7 @@ body {
 }
 
 .multimedia-e_media_next_a:hover, .multimedia-e_media_next_a:active {
-  background: #af1010;
+  background: none;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -999,22 +1125,95 @@ body {
   background-size: cover;
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: (minmax(50rem, 80rem))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(50rem, 80rem));
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.multimedia-f_button {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  background: white;
+  padding: 2rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  margin-top: 30%;
+  z-index: 20;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .multimedia-f_button {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    margin-top: 0;
+  }
+}
+
+.multimedia-f_media {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 1;
+  grid-row: 1;
+}
+
+.multimedia-f_media video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .multimedia-f_media {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 2;
+    grid-row: 2;
+  }
 }
 
 .multimedia-f_text {
-  -ms-grid-row-align: start;
-      align-self: start;
-  -ms-grid-column-align: end;
-      justify-self: end;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  margin: 15rem 0rem;
   display: -ms-grid;
   display: grid;
-  grid-row-gap: 3rem;
-  margin: 10rem;
+  -ms-grid-row-align: start;
+      align-self: start;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  grid-row-gap: 2rem;
 }
 
 @media only screen and (max-width: 37.5em) {
   .multimedia-f_text {
-    margin: 5rem 3rem;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    margin: 3rem;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .multimedia-f {
+    -ms-grid-columns: (minmax(40rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    grid-gap: 1rem;
   }
 }
 
