--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -292,14 +292,14 @@
       grid-row: 5;
       grid-column: 1;
       font-size: 10rem;
-      color: white;
-      
+      color: #333;
+
       line-height: 0;
       //box-shadow: .5px .5px 3px 0px black;
 
       &_a {
         padding: 2rem;
-        background: black;
+        background: white;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -351,7 +351,7 @@
   }
 }
 
-// MULTIMEDIA F
+// MULTIMEDIA F - KLUBBEN
 .multimedia-f {
   background: no-repeat center url(../img/mod/klubben-ute-2.jpg);
   background-size: cover;
@@ -359,6 +359,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50rem, 80rem));
   justify-content: center;
+  align-content: center;
 
   &_button {
     grid-column: 1;
@@ -366,10 +367,14 @@
     background: white;
     padding: 2rem;
     align-self: center;
-    justify-self: end;
-    margin-top: 30%;
+    justify-self: center;
     z-index: 20;
     cursor: pointer;
+    width: 15rem;
+    height: 15rem;
+
+    display: flex;
+    align-items: center;
 
     @media only screen and (max-width: $bp-small) {
       grid-column: 1;
@@ -395,7 +400,7 @@
     }
   }
 
-  &_text { 
+  &_text {
     grid-column: 2;
     grid-row: 1;
     margin: 15rem 0rem;
@@ -417,6 +422,68 @@
   }
 }
 
+//  MULTIMEDIA-G - FISKEBRYGGA + KART
+.multimedia-g {
+  background: linear-gradient(#06090ab3, #06090ab3),
+  no-repeat center url(../img/mod/fiskebrygga.jpg);
+  background-size: cover;
+  //background: lightgray;
+  display: grid;
+  //grid-template-columns: repeat(auto-fit, minmax(50rem, 80rem));
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  grid-auto-rows: 3fr;
+  grid-gap: 2rem;
+  padding: 5rem;
+
+ 
+
+  &_text {
+    color: white;
+    grid-column: 1;
+    grid-row: 2;
+    display: grid;
+    align-self: start;
+    justify-self: end;
+    grid-row-gap: 2rem;
+    max-width: 40rem;
+  }
+
+  &_media {
+
+    &_map {
+      grid-column: 2;
+      grid-row: 1 / span 3;
+      max-height: 70vh;
+      max-width: 60rem;
+      justify-self: center;
+      align-self: center;
+      min-width: 50rem;
+      margin-right: 10rem;
+    }
+
+    &_img--1 {
+      grid-column: 2;
+      grid-row: 3;
+      max-width: 40rem;
+      justify-self: start;
+      align-self: center;
+      margin-left: -10rem;
+      
+    }
+
+    &_img--2 {
+      grid-column: 2;
+      grid-row: 2;
+      max-width: 40rem;
+      align-self: start;
+      justify-self: end;
+      margin-right: 10rem;
+      margin-top: -8rem;
+    }
+  }
+}
+
 // TEXT A
 .text-a {
   padding: 10rem 0rem;
@@ -434,7 +501,7 @@
 }
 
 .text-b {
-  background: #333;
+  background: #222;
 
   &_text {
     padding: 10rem 4rem;
