--- a/sass/main.css
+++ b/sass/main.css
@@ -1044,13 +1044,13 @@ body {
   -ms-grid-column: 1;
   grid-column: 1;
   font-size: 10rem;
-  color: white;
+  color: #333;
   line-height: 0;
 }
 
 .multimedia-e_media_next_a {
   padding: 2rem;
-  background: black;
+  background: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1134,6 +1134,8 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .multimedia-f_button {
@@ -1144,13 +1146,18 @@ body {
   background: white;
   padding: 2rem;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
       align-self: center;
-  -ms-grid-column-align: end;
-      justify-self: end;
-  margin-top: 30%;
+  justify-self: center;
   z-index: 20;
   cursor: pointer;
+  width: 15rem;
+  height: 15rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -1221,6 +1228,83 @@ body {
   }
 }
 
+.multimedia-g {
+  background: -webkit-gradient(linear, left top, left bottom, from(#06090ab3), to(#06090ab3)), no-repeat center url(../img/mod/fiskebrygga.jpg);
+  background: linear-gradient(#06090ab3, #06090ab3), no-repeat center url(../img/mod/fiskebrygga.jpg);
+  background-size: cover;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2fr;
+      grid-template-columns: 1fr 2fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  grid-auto-rows: 3fr;
+  grid-gap: 2rem;
+  padding: 5rem;
+}
+
+.multimedia-g_text {
+  color: white;
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row-align: start;
+      align-self: start;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  grid-row-gap: 2rem;
+  max-width: 40rem;
+}
+
+.multimedia-g_media_map {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1 / span 3;
+  max-height: 70vh;
+  max-width: 60rem;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  min-width: 50rem;
+  margin-right: 10rem;
+}
+
+.multimedia-g_media_img--1 {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 3;
+  grid-row: 3;
+  max-width: 40rem;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-left: -10rem;
+}
+
+.multimedia-g_media_img--2 {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  max-width: 40rem;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  margin-right: 10rem;
+  margin-top: -8rem;
+}
+
 .text-a {
   padding: 10rem 0rem;
 }
@@ -1240,7 +1324,7 @@ body {
 }
 
 .text-b {
-  background: #333;
+  background: #222;
 }
 
 .text-b_text {
@@ -1606,62 +1690,77 @@ body {
   display: block;
 }
 
-/*
-// IMAGE GRID B, 2 rows of 6 columns
-.image-grid-b {
-  &_media {
-    background: white;
-    display: grid;
-    grid-template: repeat(2, 15vw) / repeat(6, 1fr);
-    grid-gap: 1.5rem;
-    padding: 1.5rem;
-
-    &_img {
-      &--1 {
-        grid-row: 1 / span 2;
-        grid-column: 1;
-      }
-
-      &--2 {
-        grid-row: 1;
-        grid-column: 2;
-      }
-
-      &--3 {
-        grid-row: 1 / 1;
-        grid-column: 3;
-      }
-
-      &--4 {
-        grid-row: 1 / span 2;
-        grid-column: 4 / span 2;
-      }
-
-      &--5 {
-        grid-row: 2;
-        grid-column: 3;
-      }
-
-      &--6 {
-        grid-row: 2;
-        grid-column: 2;
-      }
-
-      &--7 {
-        grid-row: 1 / span 2;
-        grid-column: 6 / -1;
-      }
-    }
-  }
-
-  & img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
+.image-grid-b_media {
+  background: white;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (15vw)[2];
+  -ms-grid-columns: (1fr)[6];
+      grid-template: repeat(2, 15vw)/repeat(6, 1fr);
+  grid-gap: 1.5rem;
+  padding: 1.5rem;
 }
-*/
+
+.image-grid-b_media_img--1 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / span 2;
+  -ms-grid-column: 1;
+  grid-column: 1;
+}
+
+.image-grid-b_media_img--2 {
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.image-grid-b_media_img--3 {
+  -ms-grid-row: 1;
+  grid-row: 1 / 1;
+  -ms-grid-column: 3;
+  grid-column: 3;
+}
+
+.image-grid-b_media_img--4 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / span 2;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 2;
+  grid-column: 4 / span 2;
+}
+
+.image-grid-b_media_img--5 {
+  -ms-grid-row: 2;
+  grid-row: 2;
+  -ms-grid-column: 3;
+  grid-column: 3;
+}
+
+.image-grid-b_media_img--6 {
+  -ms-grid-row: 2;
+  grid-row: 2;
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.image-grid-b_media_img--7 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / span 2;
+  grid-column: 6 / -1;
+}
+
+.image-grid-b img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+}
+
 .dv-small-a {
   padding: 10rem 0rem;
   background: linear-gradient(55deg, #2c0303a2 0%, #3a3a3aa8 85%), no-repeat center url(../img/bilder-bak_8443.jpg);
