--- a/sass/_multimedia-modules.scss
+++ b/sass/_multimedia-modules.scss
@@ -76,13 +76,14 @@
   }
 }
 
-// MULTIMEDIA B
+// MULTIMEDIA B - Familien
 .multimedia-b {
   width: 100%;
 
   background: linear-gradient(55deg, #182949de 0%, #804646a4 85%),
     no-repeat center url(../img/mod/familien.jpg);
   background-size: cover;
+  background-attachment: fixed;
 
   display: grid;
   //grid-template-columns: repeat(auto-fit, minmax(70rem, 1fr));
@@ -171,13 +172,14 @@
 // MULTIMEDIA D
 .multimedia-d {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50rem, 70rem));
-  grid-gap: 10rem;
+  grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
+  grid-gap: 3rem;
   justify-content: center;
 
   background: linear-gradient(55deg, #804646a4 0%, #182949de 85%),
     no-repeat center url(../img/mod/juke-vid.jpg);
   background-size: cover;
+  background-attachment: fixed;
 
   &_media {
     display: grid;
@@ -187,8 +189,8 @@
 
     &_img--1 {
       grid-row: 3;
-      grid-column: 3 / 6;
-      width: 100%;
+      grid-column: 3 / 5;
+      width: 110%;
 
       @media only screen and (max-width: $bp-small) {
         grid-row: 3;
@@ -198,9 +200,10 @@
     }
 
     &_img--2 {
-      grid-row: 6;
+      grid-row: 5;
       grid-column: 5 / 7;
       z-index: 20;
+      width: 80%;
 
       @media only screen and (max-width: $bp-small) {
         grid-row: 5;
@@ -233,9 +236,10 @@
   }
 
   &_excerpt {
-    grid-row: 2;
-    grid-column: 4 / 7;
+    grid-row: 3;
+    grid-column: 5 / 7;
     text-align: left;
+    width: 110%;
 
     @media only screen and (max-width: $bp-small) {
       grid-row: 2;
@@ -354,6 +358,7 @@
 // MULTIMEDIA F - KLUBBEN
 .multimedia-f {
   background: no-repeat center url(../img/mod/klubben-ute-2.jpg);
+  background-attachment: fixed;
   background-size: cover;
 
   display: grid;
@@ -427,26 +432,101 @@
   background: linear-gradient(#06090ab3, #06090ab3),
   no-repeat center url(../img/mod/fiskebrygga.jpg);
   background-size: cover;
+  background-attachment: fixed;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
+  grid-gap: 3rem;
+  justify-content: center;
+  align-content: center;
+
+  padding: 5rem;
+
+  &_text {
+    color: white;
+    display: grid;
+    align-self: start;
+    justify-self: center;
+    grid-row-gap: 2rem;
+    max-width: 40rem;
+    margin-top: 5rem;
+  }
+
+  &_media {
+    display: grid;
+    grid-template-rows: repeat(8, 10rem);
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: auto;
+
+    &_map {
+      background: orangered;
+      grid-row: 2 / span 6;
+      grid-column: 1 / span 4;
+      z-index: 2;
+
+      @media only screen and (max-width: $bp-small) {
+      }
+    }
+
+    &_img--1 {
+      grid-row: 7;
+      grid-column: 5;
+      justify-self: center;
+      align-self: center;
+      width: 200%;
+      z-index: 3;
+      display: none;
+
+      @media only screen and (max-width: $bp-small) {
+      }
+    }
+
+    &_img--2 {
+      grid-row: 3;
+      grid-column: 4;
+      width: 250%;
+      justify-self: start;
+      align-self: end;
+      display: none;
+
+      @media only screen and (max-width: $bp-small) {
+      }
+    }
+    
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    grid-gap: 1rem;
+  }
+  /*
+  background: linear-gradient(#06090ab3, #06090ab3),
+  no-repeat center url(../img/mod/fiskebrygga.jpg);
+  background-size: cover;
   //background: lightgray;
   display: grid;
   //grid-template-columns: repeat(auto-fit, minmax(50rem, 80rem));
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: minmax(50rem, 1fr) minmax(50rem, 3fr);
   grid-template-rows: 1fr;
   grid-auto-rows: 3fr;
   grid-gap: 2rem;
   padding: 5rem;
 
- 
-
   &_text {
     color: white;
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 2 / span 2;
     display: grid;
     align-self: start;
     justify-self: end;
     grid-row-gap: 2rem;
     max-width: 40rem;
+
+    @media only screen and (max-width: $bp-small) {
+      grid-column: 1;
+      grid-row: 1;
+      justify-self: center;
+    }
   }
 
   &_media {
@@ -460,6 +540,13 @@
       align-self: center;
       min-width: 50rem;
       margin-right: 10rem;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: 1;
+        grid-row: 3;
+        margin-right: 0;
+        min-height: 50vh;
+      }
     }
 
     &_img--1 {
@@ -469,7 +556,14 @@
       justify-self: start;
       align-self: center;
       margin-left: -10rem;
-      
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: 1;
+        grid-row: 2;
+        justify-self: center;
+        align-self: center;
+        margin-left: 0;
+      }
     }
 
     &_img--2 {
@@ -480,8 +574,28 @@
       justify-self: end;
       margin-right: 10rem;
       margin-top: -8rem;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: 1;
+        grid-row: 4;
+        justify-self: center;
+        margin-right: 0;
+        margin-top: 0;
+      }
     }
   }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 10rem 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    grid-gap: 1rem;
+    grid-template-rows: 1fr;
+    grid-auto-rows: auto;
+    justify-content: center;
+    align-content: center;
+  }*/
+
+  
 }
 
 // TEXT A
