--- a/sass/main.css
+++ b/sass/main.css
@@ -258,37 +258,6 @@ parallax
 animasjon
 
 responsive bilder med picture tag*/
-:root {
-  --blue: #007bff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --red: #dc3545;
-  --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #28a745;
-  --teal: #20c997;
-  --cyan: #17a2b8;
-  --white: #fff;
-  --gray: #868e96;
-  --gray-dark: #343a40;
-  --primary: #007bff;
-  --secondary: #868e96;
-  --success: #28a745;
-  --info: #17a2b8;
-  --warning: #ffc107;
-  --danger: #dc3545;
-  --light: #f8f9fa;
-  --dark: #343a40;
-  --breakpoint-xs: 0;
-  --breakpoint-sm: 576px;
-  --breakpoint-md: 768px;
-  --breakpoint-lg: 992px;
-  --breakpoint-xl: 1200px;
-  --font-family-sans-serif: Arial,sans-serif;
-  --font-family-monospace: monospace;
-}
-
 *,
 *::after,
 *::before {
@@ -344,8 +313,7 @@ body {
 
 .headline--xs, .headline--s, .headline--m, .headline--l, .headline--xl {
   text-align: center;
-  font-family: 'Oswald', sans-serif;
-  font-family: 'Anton', sans-serif;
+  font-family: 'Anton', Arial, sans-serif;
   line-height: 125%;
   letter-spacing: .1rem;
 }
@@ -384,6 +352,7 @@ body {
 
 .headline--l {
   font-size: 10rem;
+  letter-spacing: .2rem;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -404,7 +373,7 @@ body {
 }
 
 .text--s, .text--m, .text--l {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .text--s {
@@ -759,6 +728,7 @@ body {
   width: 100%;
   background: linear-gradient(55deg, #182949de 0%, #804646a4 85%), no-repeat center url(../img/mod/familien.jpg);
   background-size: cover;
+  background-attachment: fixed;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(60rem, 1fr))[auto-fit];
@@ -873,14 +843,15 @@ body {
 .multimedia-d {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(50rem, 70rem))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(50rem, 70rem));
-  grid-gap: 10rem;
+  -ms-grid-columns: (minmax(60rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
+  grid-gap: 3rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   background: linear-gradient(55deg, #804646a4 0%, #182949de 85%), no-repeat center url(../img/mod/juke-vid.jpg);
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .multimedia-d_media {
@@ -897,9 +868,9 @@ body {
   -ms-grid-row: 3;
   grid-row: 3;
   -ms-grid-column: 3;
-  -ms-grid-column-span: 3;
-  grid-column: 3 / 6;
-  width: 100%;
+  -ms-grid-column-span: 2;
+  grid-column: 3 / 5;
+  width: 110%;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -914,12 +885,13 @@ body {
 }
 
 .multimedia-d_media_img--2 {
-  -ms-grid-row: 6;
-  grid-row: 6;
+  -ms-grid-row: 5;
+  grid-row: 5;
   -ms-grid-column: 5;
   -ms-grid-column-span: 2;
   grid-column: 5 / 7;
   z-index: 20;
+  width: 80%;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -960,12 +932,13 @@ body {
 }
 
 .multimedia-d_excerpt {
-  -ms-grid-row: 2;
-  grid-row: 2;
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 3;
-  grid-column: 4 / 7;
+  -ms-grid-row: 3;
+  grid-row: 3;
+  -ms-grid-column: 5;
+  -ms-grid-column-span: 2;
+  grid-column: 5 / 7;
   text-align: left;
+  width: 110%;
 }
 
 @media only screen and (max-width: 37.5em) {
@@ -1126,6 +1099,7 @@ body {
 
 .multimedia-f {
   background: no-repeat center url(../img/mod/klubben-ute-2.jpg);
+  background-attachment: fixed;
   background-size: cover;
   display: -ms-grid;
   display: grid;
@@ -1232,77 +1206,184 @@ body {
   background: -webkit-gradient(linear, left top, left bottom, from(#06090ab3), to(#06090ab3)), no-repeat center url(../img/mod/fiskebrygga.jpg);
   background: linear-gradient(#06090ab3, #06090ab3), no-repeat center url(../img/mod/fiskebrygga.jpg);
   background-size: cover;
+  background-attachment: fixed;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 2fr;
-      grid-template-columns: 1fr 2fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
+  -ms-grid-columns: (minmax(60rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
+  grid-gap: 3rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 5rem;
+  /*
+  background: linear-gradient(#06090ab3, #06090ab3),
+  no-repeat center url(../img/mod/fiskebrygga.jpg);
+  background-size: cover;
+  //background: lightgray;
+  display: grid;
+  //grid-template-columns: repeat(auto-fit, minmax(50rem, 80rem));
+  grid-template-columns: minmax(50rem, 1fr) minmax(50rem, 3fr);
+  grid-template-rows: 1fr;
   grid-auto-rows: 3fr;
   grid-gap: 2rem;
   padding: 5rem;
+
+  &_text {
+    color: white;
+    grid-column: 1;
+    grid-row: 2 / span 2;
+    display: grid;
+    align-self: start;
+    justify-self: end;
+    grid-row-gap: 2rem;
+    max-width: 40rem;
+
+    @media only screen and (max-width: $bp-small) {
+      grid-column: 1;
+      grid-row: 1;
+      justify-self: center;
+    }
+  }
+
+  &_media {
+
+    &_map {
+      grid-column: 2;
+      grid-row: 1 / span 3;
+      max-height: 70vh;
+      max-width: 60rem;
+      justify-self: center;
+      align-self: center;
+      min-width: 50rem;
+      margin-right: 10rem;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: 1;
+        grid-row: 3;
+        margin-right: 0;
+        min-height: 50vh;
+      }
+    }
+
+    &_img--1 {
+      grid-column: 2;
+      grid-row: 3;
+      max-width: 40rem;
+      justify-self: start;
+      align-self: center;
+      margin-left: -10rem;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: 1;
+        grid-row: 2;
+        justify-self: center;
+        align-self: center;
+        margin-left: 0;
+      }
+    }
+
+    &_img--2 {
+      grid-column: 2;
+      grid-row: 2;
+      max-width: 40rem;
+      align-self: start;
+      justify-self: end;
+      margin-right: 10rem;
+      margin-top: -8rem;
+
+      @media only screen and (max-width: $bp-small) {
+        grid-column: 1;
+        grid-row: 4;
+        justify-self: center;
+        margin-right: 0;
+        margin-top: 0;
+      }
+    }
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 10rem 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    grid-gap: 1rem;
+    grid-template-rows: 1fr;
+    grid-auto-rows: auto;
+    justify-content: center;
+    align-content: center;
+  }*/
 }
 
 .multimedia-g_text {
   color: white;
-  -ms-grid-column: 1;
-  grid-column: 1;
-  -ms-grid-row: 2;
-  grid-row: 2;
   display: -ms-grid;
   display: grid;
   -ms-grid-row-align: start;
       align-self: start;
-  -ms-grid-column-align: end;
-      justify-self: end;
+  -ms-grid-column-align: center;
+      justify-self: center;
   grid-row-gap: 2rem;
   max-width: 40rem;
+  margin-top: 5rem;
+}
+
+.multimedia-g_media {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (10rem)[8];
+      grid-template-rows: repeat(8, 10rem);
+  -ms-grid-columns: (1fr)[6];
+      grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: auto;
 }
 
 .multimedia-g_media_map {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 3;
-  grid-row: 1 / span 3;
-  max-height: 70vh;
-  max-width: 60rem;
+  background: orangered;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 6;
+  grid-row: 2 / span 6;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / span 4;
+  z-index: 2;
+}
+
+.multimedia-g_media_img--1 {
+  -ms-grid-row: 7;
+  grid-row: 7;
+  -ms-grid-column: 5;
+  grid-column: 5;
   -ms-grid-column-align: center;
       justify-self: center;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  min-width: 50rem;
-  margin-right: 10rem;
-}
-
-.multimedia-g_media_img--1 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  -ms-grid-row: 3;
-  grid-row: 3;
-  max-width: 40rem;
-  -ms-grid-column-align: start;
-      justify-self: start;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin-left: -10rem;
+  width: 200%;
+  z-index: 3;
+  display: none;
 }
 
 .multimedia-g_media_img--2 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  -ms-grid-row: 2;
-  grid-row: 2;
-  max-width: 40rem;
-  -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
-  -ms-grid-column-align: end;
-      justify-self: end;
-  margin-right: 10rem;
-  margin-top: -8rem;
+  -ms-grid-row: 3;
+  grid-row: 3;
+  -ms-grid-column: 4;
+  grid-column: 4;
+  width: 250%;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  display: none;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .multimedia-g {
+    -ms-grid-columns: (minmax(40rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    grid-gap: 1rem;
+  }
 }
 
 .text-a {
